--- a/options.html
+++ b/options.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New Tab Page Options</title>
-  <link rel="stylesheet" type="text/css" href="options.css">
+  <link rel="stylesheet" href="options.css">
 </head>
-
 <body>
-  <h1>New Tab Page Options</h1>
-
-  <form id="optionsForm">
-    <div class="optionItem">
-      <label for="apiKey">OpenWeatherMap API Key:</label>
-      <input type="text" id="apiKey" name="apiKey">
-    </div>
-    <div class="optionItem">
-      <label for="country">Country:</label>
-      <input type="text" id="country" name="country">
-    </div>
-    <div class="optionItem">
-      <label for="state">State:</label>
-      <input type="text" id="state" name="state">
-    </div>
-    <div class="optionItem">
-      <label for="city">City:</label>
-      <input type="text" id="city" name="city">
-    </div>
-    <div class="optionItem">
-      <label for="temperatureUnit">Temperature Unit:</label>
-      <select id="temperatureUnit" name="temperatureUnit">
-        <option value="celsius">Celsius</option>
-        <option value="fahrenheit">Fahrenheit</option>
-      </select>
-    </div>
-    <div class="optionItem submitButton">
-      <button type="submit">Save</button>
-    </div>
-  </form>
+  <div class="container">
+    <h1 class="title">New Tab Page Options</h1>
+    <form id="options-form" class="form">
+      <div class="form-group">
+        <label for="apiKey" class="label">OpenWeatherMap API Key:</label>
+        <input type="text" id="apiKey" class="input" placeholder="API Key">
+      </div>
+      <div class="form-group">
+        <label for="country" class="label">Country:</label>
+        <input type="text" id="country" class="input" placeholder="Country">
+      </div>
+      <div class="form-group">
+        <label for="state" class="label">State:</label>
+        <input type="text" id="state" class="input" placeholder="State">
+      </div>
+      <div class="form-group">
+        <label for="city" class="label">City:</label>
+        <input type="text" id="city" class="input" placeholder="City">
+      </div>
+      <div class="form-group">
+        <label for="temperatureUnit" class="label">Temperature Unit:</label>
+        <select id="temperatureUnit" class="select">
+          <option value="celsius">Celsius</option>
+          <option value="fahrenheit">Fahrenheit</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="button">Save Options</button>
+      </div>
+    </form>
+  </div>
 
   <script src="options.js"></script>
 </body>
-
 </html>
