--- a/options.html
+++ b/options.html
@@ -34,7 +34,7 @@
         </select>
       </div>
       <div class="form-group">
-        <button type="submit" class="button">Save Options</button>
+        <button type="submit" class="optionItem button submitButton">Save Options</button>
       </div>
     </form>
   </div>
