Fix settings and weather implementation

--- a/newtab.html
+++ b/newtab.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
   <title>New Tab</title>
   <link rel="stylesheet" type="text/css" href="newtab.css">
 </head>
+
 <body>
   <div class="container">
-    <h1 class="quote"></h1>
+    <div class="quote"></div>
     <div class="time"></div>
     <div class="weather"></div>
   </div>
+
   <script src="newtab.js"></script>
 </body>
+
 </html>
