--- a/newtab.html
+++ b/newtab.html
@@ -4,6 +4,7 @@
 <head>
   <title>New Tab</title>
   <link rel="stylesheet" type="text/css" href="newtab.css">
+  <meta charset="UTF-8">
 </head>
 
 <body>
