--- a/options.html
+++ b/options.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New Tab Page Options</title>
   <link rel="stylesheet" href="options.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.1/spectrum.min.js"></script>
 </head>
+
 <body>
   <div class="container">
     <h1 class="title">New Tab Page Options</h1>
@@ -22,6 +25,14 @@
         </select>
       </div>
       <div class="form-group">
+        <label for="wallpaperColor" class="label">Wallpaper Color:</label>
+        <input type="color" id="wallpaperColor" class="input">
+      </div>
+      <div class="form-group">
+        <label for="textColor" class="label">Text Color:</label>
+        <input type="color" id="textColor" class="input">
+      </div>
+      <div class="form-group">
         <button type="submit" class="optionItem button submitButton">Save Options</button>
       </div>
     </form>
@@ -29,4 +40,5 @@
 
   <script src="options.js"></script>
 </body>
+
 </html>
