--- a/newtab.html
+++ b/newtab.html
@@ -5,6 +5,7 @@
   <title>New Tab</title>
   <link rel="stylesheet" type="text/css" href="newtab.css">
   <meta charset="UTF-8">
+  <style id="custom-styles"></style>
 </head>
 
 <body>
@@ -24,7 +25,6 @@
       </path>
       <path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0"></path>
     </svg>
-
   </div>
 
   <div class="popup">
