--- a/newtab.html
+++ b/newtab.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
+
+  
   <div class="container">
     <div class="quote"></div>
     <div class="time"></div>
     <div class="weather"></div>
+    <br><br><br>
+    <div class="top-sites"></div>
   </div>
 
   <div class="settings-icon">
